renamed notEmpty -> isNotEmpty